# NLP-5029

./: .env.example  Dockerfile  Makefile  README.md  activate.sh  pyproject.toml
notebooks/: improve_tass_2018.ipynb
scripts/: tass_2018_improved.py
src/: __init__.py
tests/: conftest.py
